@@ -148,6 +148,7 @@ version <next>
 - ALSA support for playback and record
 - Electronic Arts TQI decoder
 - OpenJPEG based JPEG 2000 decoder
+- NC (NC4600) cameras file demuxer
 
 version 0.4.9-pre1:
 
